--- a/index.html
+++ b/index.html
@@ -91,13 +91,14 @@
                 </h2>
                 <div class="accordion" id="accordionPanelsStayOpenOne">
                     <h2 class="text-center mb-4">Joki Rank</h2>
+                    <h5 style="color: #1abc9c;">Diskon besar untuk pembelian melalui website!</h5>
                     <div class="accordion-item">
                         <h2 class="accordion-header" id="panelsStayOpen-headingOne">
                             <button class="accordion-button" type="button" data-bs-toggle="collapse"
                                 data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true"
                                 aria-controls="panelsStayOpen-collapseOne">
-                                1. <img src="assets/img/warrior-50px.png" width="50px" alt="Logo Warrior"> Warrior = Rp.
-                                1500
+                                1. <img src="assets/img/warrior-50px.png" width="50px" alt="Logo Warrior">
+                                <p class="ps mb-0">Warrior = Rp.2500 </p>&nbsp;= Rp. 1500
                             </button>
                         </h2>
                         <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show"
@@ -113,13 +114,14 @@
                             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                                 data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false"
                                 aria-controls="panelsStayOpen-collapseTwo">
-                                2. <img src="assets/img/elite-50px.png" width="50px" alt="Logo Elite"> Elite = Rp. 3000
+                                2. <img src="assets/img/elite-50px.png" width="50px" alt="Logo Elite">
+                                <p class="ps mb-0">Elite = Rp.3000</p>&nbsp;= Rp. 2000
                             </button>
                         </h2>
                         <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse"
                             aria-labelledby="panelsStayOpen-headingTwo">
                             <div class="accordion-body">
-                                <strong>Jasa joki dari Elite ke Master = Rp. 30.000 (12<i class="stars"></i>)</strong>
+                                <strong>Jasa joki dari Elite ke Master = Rp. 20.000 (12<i class="stars"></i>)</strong>
                                 | Waktu proses 4 jam - 1 hari.
                             </div>
                         </div>
@@ -129,14 +131,14 @@
                             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                                 data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false"
                                 aria-controls="panelsStayOpen-collapseThree">
-                                3. <img src="assets/img/master-50px.png" width="50px" alt="Logo Master"> Master = Rp.
-                                4000
+                                3. <img src="assets/img/master-50px.png" width="50px" alt="Logo Master">
+                                <p class="ps mb-0">Master = Rp.4000</p>&nbsp;= Rp. 2500
                             </button>
                         </h2>
                         <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse"
                             aria-labelledby="panelsStayOpen-headingThree">
                             <div class="accordion-body">
-                                <strong>Jasa joki dari Master ke Grand Master = Rp. 60.000 (16<i
+                                <strong>Jasa joki dari Master ke Grand Master = Rp. 35.000 (16<i
                                         class="stars"></i>)</strong>
                                 | Waktu proses 5 Jam - 1 hari.
                             </div>
@@ -148,14 +150,13 @@
                                 data-bs-target="#panelsStayOpen-collapseFour" aria-expanded="false"
                                 aria-controls="panelsStayOpen-collapseFour">
                                 4. <img src="assets/img/grandmaster-50px.png" width="50px" alt="Logo Grand Master">
-                                Grand
-                                Master = Rp. 6000
+                                <p class="ps mb-0">Grand Master = Rp.5000</p>&nbsp;= Rp. 3000
                             </button>
                         </h2>
                         <div id="panelsStayOpen-collapseFour" class="accordion-collapse collapse"
                             aria-labelledby="panelsStayOpen-headingFour">
                             <div class="accordion-body">
-                                <strong>Jasa joki dari Grand Master ke Epic = Rp. 145.000 (25<i
+                                <strong>Jasa joki dari Grand Master ke Epic = Rp. 70.000 (25<i
                                         class="stars"></i>)</strong>
                                 | Waktu proses 1 hari.
                             </div>
@@ -166,13 +167,13 @@
                             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                                 data-bs-target="#panelsStayOpen-collapseFive" aria-expanded="false"
                                 aria-controls="panelsStayOpen-collapseFive">
-                                5. <img src="assets/img/epic-50px.png" width="50px" alt="Logo Epic"> Epic = Rp. 8000
+                                5. <img src="assets/img/epic-50px.png" width="50px" alt="Logo Epic"> Epic = Rp. 6000
                             </button>
                         </h2>
                         <div id="panelsStayOpen-collapseFive" class="accordion-collapse collapse"
                             aria-labelledby="panelsStayOpen-headingFive">
                             <div class="accordion-body">
-                                <strong>Jasa joki dari Epic ke Legend = Rp. 195.000 (25<i class="stars"></i>)</strong>
+                                <strong>Jasa joki dari Epic ke Legend = Rp. 145.000 (25<i class="stars"></i>)</strong>
                                 | Waktu proses 1 hari.
                             </div>
                         </div>
@@ -183,13 +184,13 @@
                                 data-bs-target="#panelsStayOpen-collapseSix" aria-expanded="false"
                                 aria-controls="panelsStayOpen-collapseSix">
                                 6. <img src="assets/img/legend-50px.png" width="50px" alt="Logo Legend"> Legend = Rp.
-                                10.000
+                                8000
                             </button>
                         </h2>
                         <div id="panelsStayOpen-collapseSix" class="accordion-collapse collapse"
                             aria-labelledby="panelsStayOpen-headingSix">
                             <div class="accordion-body">
-                                <strong>Jasa joki dari Legend ke Mythic = Rp. 245.000 (25<i class="stars"></i>)</strong>
+                                <strong>Jasa joki dari Legend ke Mythic = Rp. 195.000 (25<i class="stars"></i>)</strong>
                                 | Waktu proses 1 hari.
                             </div>
                         </div>
@@ -226,7 +227,7 @@
                             aria-labelledby="panelsStayOpen-headingEight">
                             <div class="accordion-body">
                                 <strong>Jasa joki Mythical Glory bisa <a
-                                        href="https://api.whatsapp.com/send?phone=6285770634144&text=Mau%20Joki%20Dong"
+                                        href="https://api.whatsapp.com/send?phone=6285770634144&text=Mau%20Joki%20dong,%20kode%20promo%20diskon%20pembelian%20dari%20website%20XyzVkiJokiwin"
                                         target="_blank" rel="noopener">Kontak
                                         kami</a> terlebih dahulu</strong>
                                 | Waktu proses 1 hari/tergantung mau berapa match.
@@ -251,8 +252,11 @@
                         </div>
                     </div>
                     <ul class="m-2">
+                        <li><strong>Joki Top Global chat admin.</i></strong></li>
+                        <li><strong>Bisa order solo rank untuk harga lebih murah bisa chat admin</i></strong></li>
                         <li><strong>Legend kebawah dihitung Per-Bintang <i class="stars"></i></strong></li>
                         <li><strong>Minimal order 5 bintang/5 match</i></strong></li>
+                        <li><strong>Grandmaster kebawah minimal order 10 bintang/10 match</i></strong></li>
                         <li>Bebas request hero favorit, MMR hero auto naik</li>
                         <li>WR dan Battle Point auto naik</li>
                         <li>Jika beruntung random bonus savage atau maniac
@@ -260,13 +264,14 @@
                         <li>Keuntungan membeli paket mendapat potongan harga dari jumlah Per-Tier.</li>
                     </ul>
                     <div class="text-center mt-5">
-                        <a href="https://api.whatsapp.com/send?phone=6285770634144&text=Mau%20Joki%20Dong"
+                        <a href="https://api.whatsapp.com/send?phone=6285770634144&text=Mau%20Joki%20dong,%20kode%20promo%20diskon%20pembelian%20dari%20website%20XyzVkiJokiwin"
                             target="_blank" rel="noopener" class="btn btn-xl btn-primary">
                             JOKI SEKARANG
                         </a>
                     </div>
                 </div>
             </div>
+
             <!-- paket push wr classic -->
             <div class="row justify-content-center mt-5">
                 <div class="accordion" id="accordionPanelsStayOpenNine">
@@ -281,7 +286,8 @@
                             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                                 data-bs-target="#panelsStayOpen-collapseNine" aria-expanded="false"
                                 aria-controls="panelsStayOpen-collapseNine">
-                                1. <img src="assets/img/Warrior.png" width="50px" alt="Logo Warrior"> Warrior = Rp. 1000
+                                1. <img src="assets/img/warrior-50px.png" width="50px" alt="Logo Warrior"> Warrior = Rp.
+                                1000
                             </button>
                         </h2>
                         <div id="panelsStayOpen-collapseNine" class="accordion-collapse collapse"
@@ -298,7 +304,7 @@
                             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                                 data-bs-target="#panelsStayOpen-collapseTen" aria-expanded="false"
                                 aria-controls="panelsStayOpen-collapseTen">
-                                2. <img src="assets/img/Elite.png" width="50px" alt="Logo Elite"> Elite = Rp. 1500
+                                2. <img src="assets/img/elite-50px.png" width="50px" alt="Logo Elite"> Elite = Rp. 1500
                             </button>
                         </h2>
                         <div id="panelsStayOpen-collapseTen" class="accordion-collapse collapse"
@@ -314,7 +320,8 @@
                             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                                 data-bs-target="#panelsStayOpen-collapseEleven" aria-expanded="false"
                                 aria-controls="panelsStayOpen-collapseEleven">
-                                3. <img src="assets/img/Master.png" width="50px" alt="Logo Master"> Master = Rp. 2000
+                                3. <img src="assets/img/master-50px.png" width="50px" alt="Logo Master"> Master = Rp.
+                                2000
                             </button>
                         </h2>
                         <div id="panelsStayOpen-collapseEleven" class="accordion-collapse collapse"
@@ -330,7 +337,8 @@
                             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                                 data-bs-target="#panelsStayOpen-collapseTwelve" aria-expanded="false"
                                 aria-controls="panelsStayOpen-collapseTwelve">
-                                4. <img src="assets/img/Grandmaster.png" width="50px" alt="Logo Grand Master"> Grand
+                                4. <img src="assets/img/grandmaster-50px.png" width="50px" alt="Logo Grand Master">
+                                Grand
                                 Master = Rp. 2500
                             </button>
                         </h2>
@@ -348,7 +356,7 @@
                             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                                 data-bs-target="#panelsStayOpen-Thirteen" aria-expanded="false"
                                 aria-controls="panelsStayOpen-Thirteen">
-                                5. <img src="assets/img/Epic.png" width="50px" alt="Logo Epic"> Epic = Rp. 3000
+                                5. <img src="assets/img/epic-50px.png" width="50px" alt="Logo Epic"> Epic = Rp. 3000
                             </button>
                         </h2>
                         <div id="panelsStayOpen-Thirteen" class="accordion-collapse collapse"
@@ -420,7 +428,7 @@
                         <li>Keuntungan membeli paket mendapat potongan harga dari jumlah Per-Tier.</li>
                     </ul>
                     <div class="text-center mt-5">
-                        <a href="https://api.whatsapp.com/send?phone=6285770634144&text=Mau%20Joki%20Dong"
+                        <a href="https://api.whatsapp.com/send?phone=6285770634144&text=Mau%20Joki%20dong,%20kode%20promo%20diskon%20pembelian%20dari%20website%20XyzVkiJokiwin"
                             target="_blank" rel="noopener" class="btn btn-xl btn-primary">
                             JOKI SEKARANG
                         </a>
@@ -464,7 +472,7 @@
                             <h5 class="card-title">Metode Pembayaran Yang Tersedia</h5>
                             <p class="card-text">Hanya menerima metode pembayaran yang tersedia dibawah, detail
                                 pembayaran chat <a
-                                    href="https://api.whatsapp.com/send?phone=6285770634144&text=Mau%20Joki%20Dong"
+                                    href="https://api.whatsapp.com/send?phone=6285770634144&text=Mau%20Joki%20dong,%20kode%20promo%20diskon%20pembelian%20dari%20website%20XyzVkiJokiwin"
                                     target="_blank" rel="noopener">
                                     Admin.</a>
                             </p>
@@ -587,8 +595,8 @@
             </div>
             <!-- kenapa Section Button-->
             <div class="text-center mt-4">
-                <a href="https://api.whatsapp.com/send?phone=6285770634144&text=Mau%20Joki%20Dong" target="_blank"
-                    rel="noopener" class="btn btn-xl btn-outline-light">
+                <a href="https://api.whatsapp.com/send?phone=6285770634144&text=Mau%20Joki%20dong,%20kode%20promo%20diskon%20pembelian%20dari%20website%20XyzVkiJokiwin"
+                    target="_blank" rel="noopener" class="btn btn-xl btn-outline-light">
                     JOKI SEKARANG
                 </a>
             </div>
@@ -884,6 +892,23 @@
     <!-- Bootstrap core JS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Core theme JS-->
+    <!-- untuk random angka dan huruf -->
+    <!-- <script>
+        function maketextnumber(n) {
+            for (var r = ["a", "b", "c", "d", "e", "f", "g", "h", "i", "j", "k", "l", "m", "n",
+                "o", "p", "q", "r", "s", "t", "u", "v", "w", "x", "y", "z", "A", "B", "C", "D", "E", "F",
+                "G", "H", "I", "J", "K", "L", "M", "N", "O", "P", "Q", "R", "S", "T", "U", "V", "W",
+                "X", "Y", "Z", "0", "1", "2", "3", "4", "5", "6", "7", "8", "9"],
+                e = n, t = new Array, a = 0; a <= e - 1; a++) {
+                t[a] = r[parseInt(Math.random() * r.length)];
+                t = t;
+                randomtextnumber = t.join("")
+            }
+        }
+        var hasil = document.getElementById("hasil-output");
+        hasil.innerHTML = (maketextnumber(6), randomtextnumber);
+    </script> -->
+    <!-- end untuk random angka dan huruf -->
     <script>
         // 1. tangkap element dengan class menu
         const menu = document.querySelector(".menu");
