new menu hitung wr

--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ms-auto menu">
                     <li class="nav-item mx-0 mx-lg-1"><a class="menu__link nav-link py-3 px-0 px-lg-3 rounded"
-                            href="#pilihan-paket">PILIHAN PAKET</a></li>
+                            href="#pilihan-paket">PAKET JOKI</a></li>
+                    <li class="nav-item mx-0 mx-lg-1"><a class="menu__link nav-link py-3 px-0 px-lg-3 rounded"
+                            href="#hitung-wr">HITUNG WR</a></li>
                     <li class="nav-item mx-0 mx-lg-1"><a class="menu__link nav-link py-3 px-0 px-lg-3 rounded"
                             href="#syaratdanmetode">SYARAT & METODE</a></li>
                     <li class="nav-item mx-0 mx-lg-1"><a class="menu__link nav-link py-3 px-0 px-lg-3 rounded"
@@ -276,14 +278,10 @@
             </div>
 
             <!-- paket push wr classic -->
+            <h2 class="text-center mb-4 mt-5">Joki Classic UP Win Rate (100% Menang)</h2>
+
             <div class="row justify-content-center mt-5">
                 <div class="accordion" id="accordionPanelsStayOpenNine">
-                    <h2 class="text-center mb-4">Joki Classic UP Win Rate (100% Menang)</h2>
-                    <strong>Penting: </strong>Untuk mengetahui berapa match yang
-                    diperlukan untuk
-                    mencapai target WR yang diinginkan
-                    <a href="http://hitungwr.com/">klik</a>
-
                     <div class="accordion-item mt-2">
                         <h2 class="accordion-header" id="panelsStayOpen-headingNine">
                             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
@@ -370,57 +368,7 @@
                             </div>
                         </div>
                     </div>
-                    <!-- <div class="accordion-item">
-                        <h2 class="accordion-header" id="panelsStayOpen-heading14">
-                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                                data-bs-target="#panelsStayOpen-14" aria-expanded="false"
-                                aria-controls="panelsStayOpen-14">
-                                6. <img src="assets/img/Legend.png" width="50px" alt=""> Legend = Rp. 9.000
-                            </button>
-                        </h2>
-                        <div id="panelsStayOpen-14" class="accordion-collapse collapse"
-                            aria-labelledby="panelsStayOpen-heading14">
-                            <div class="accordion-body">
-                                <strong>Jasa joki push WR Classic Legend (Paket 12 match = Rp. 220.000)</strong> | Waktu
-                                proses
-                                5 jam - 1 hari/tergantung permintaan match.
-                            </div>
-                        </div>
-                    </div>
-                    <div class="accordion-item">
-                        <h2 class="accordion-header" id="panelsStayOpen-heading15">
-                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                                data-bs-target="#panelsStayOpen-15" aria-expanded="false"
-                                aria-controls="panelsStayOpen-15">
-                                7. <img src="assets/img/Mythic.png" width="50px" alt=""> Mythic = Rp. 10.000
-                            </button>
-                        </h2>
-                        <div id="panelsStayOpen-15" class="accordion-collapse collapse"
-                            aria-labelledby="panelsStayOpen-heading15">
-                            <div class="accordion-body">
-                                <strong>Jasa joki push WR Classic Mythic = Rp. 5.000</strong> | Waktu proses 5 jam - 1
-                                hari/tergantung permintaan match.
-                            </div>
-                        </div>
-                    </div>
-                    <div class="accordion-item">
-                        <h2 class="accordion-header" id="panelsStayOpen-heading16">
-                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                                data-bs-target="#panelsStayOpen-16" aria-expanded="false"
-                                aria-controls="panelsStayOpen-16">
-                                8. <img src="assets/img/Mythical_Glory.png" width="50px" alt=""> Mythical Glory =
-                                Rp. 11.000/point
-                            </button>
-                        </h2>
-                        <div id="panelsStayOpen-16" class="accordion-collapse collapse"
-                            aria-labelledby="panelsStayOpen-heading16">
-                            <div class="accordion-body">
-                                <strong>Jasa joki Mythical Glory dihitung Rp. 11.000/match atau
-                                    kemenangan.</strong>
-                                | Waktu proses 1 hari/tergantung mau berapa match.
-                            </div>
-                        </div>
-                    </div> -->
+
                     <ul class="m-2">
                         <li><strong>Rank Legend keatas sudah tidak ada jaminan 100% menang</strong></li>
                         <li><strong>Semakin banyak order, bonus kemenangan akan ditambahkan</strong></li>
@@ -439,6 +387,47 @@
                 </div>
             </div>
 
+        </div>
+    </section>
+
+    <section class="page-section hitung-wr" id="hitung-wr">
+        <div class="container">
+            <h2 class="page-section-heading text-center text-secondary mb-0">HITUNG WR%</h2>
+            <div class="divider-custom">
+                <div class="divider-custom-line"></div>
+            </div>
+            <div class="row justify-content-center">
+                <div class="col-md-6">
+                    <p>
+                        Berfungsi untuk mengetahui berapa match yang
+                        diperlukan untuk
+                        mencapai target Win Rate yang diinginkan.</p>
+                    <div class="alert alert-success alert-dismissible fade show d-none my-alert" role="alert">
+                        <strong>Terima kasih!</strong> Pesan anda telah terkirim.
+                        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                    </div>
+
+                    <form>
+                        <div class="mb-3">
+                            <label for="idMatch" class="form-label">Total Match Anda</label>
+                            <input type="number" class="form-control" autofocus autocomplete="off"
+                                placeholder="Cth: 399" id="tMatch">
+                        </div>
+                        <div class="mb-3">
+                            <label for="tWr" class="form-label">Total Win Rate Anda</label>
+                            <input type="number" class="form-control" step="any" autocomplete="off" id="tWr"
+                                placeholder="Cth: 72.3%">
+                        </div>
+                        <div class="mb-3">
+                            <label for="wrReq" class="form-label">Berapa Win Rate yang anda inginkan?</label>
+                            <input type="number" class="form-control" id="wrReq" step="any" autocomplete="off"
+                                placeholder="Cth: 85.5%">
+                        </div>
+                        <button type="submit" class="btn btn-success d-block w-100" id="hasil">Hasil</button>
+                        <span id="resultText" class="mt-2 text-center d-block"></span>
+                    </form>
+                </div>
+            </div>
         </div>
     </section>
 
@@ -522,50 +511,6 @@
 
                 <!-- <div class="col-md-6 col-lg-4 mb-5">
                     <div class="jualakun-item mx-auto" data-bs-toggle="modal" data-bs-target="#jualakunModal2">
-                        <div class="jualakun-item-caption d-flex align-items-center justify-content-center h-100 w-100">
-                            <div class="jualakun-item-caption-content text-center text-white"><img
-                                    src="assets/img/logo-mobile-legend-31251-300x173.png" alt="Logo Mobile Legends">
-                            </div>
-                        </div>
-                        <img class="img-fluid" src="assets/img/undraw_empty_cart_co35.svg" alt="..." />
-                    </div>
-                </div>
-
-                <div class="col-md-6 col-lg-4 mb-5">
-                    <div class="jualakun-item mx-auto" data-bs-toggle="modal" data-bs-target="#jualakunModal3">
-                        <div class="jualakun-item-caption d-flex align-items-center justify-content-center h-100 w-100">
-                            <div class="jualakun-item-caption-content text-center text-white"><img
-                                    src="assets/img/logo-mobile-legend-31251-300x173.png" alt="Logo Mobile Legends">
-                            </div>
-                        </div>
-                        <img class="img-fluid" src="assets/img/undraw_empty_cart_co35.svg" alt="..." />
-                    </div>
-                </div>
-
-                <div class="col-md-6 col-lg-4 mb-5 mb-lg-0">
-                    <div class="jualakun-item mx-auto" data-bs-toggle="modal" data-bs-target="#jualakunModal4">
-                        <div class="jualakun-item-caption d-flex align-items-center justify-content-center h-100 w-100">
-                            <div class="jualakun-item-caption-content text-center text-white"><img
-                                    src="assets/img/logo-mobile-legend-31251-300x173.png" alt="Logo Mobile Legends">
-                            </div>
-                        </div>
-                        <img class="img-fluid" src="assets/img/undraw_empty_cart_co35.svg" alt="..." />
-                    </div>
-                </div>
-
-                <div class="col-md-6 col-lg-4 mb-5 mb-md-0">
-                    <div class="jualakun-item mx-auto" data-bs-toggle="modal" data-bs-target="#jualakunModal5">
-                        <div class="jualakun-item-caption d-flex align-items-center justify-content-center h-100 w-100">
-                            <div class="jualakun-item-caption-content text-center text-white"><img
-                                    src="assets/img/logo-mobile-legend-31251-300x173.png" alt="Logo Mobile Legends">
-                            </div>
-                        </div>
-                        <img class="img-fluid" src="assets/img/undraw_empty_cart_co35.svg" alt="..." />
-                    </div>
-                </div>
-
-                <div class="col-md-6 col-lg-4">
-                    <div class="jualakun-item mx-auto" data-bs-toggle="modal" data-bs-target="#jualakunModal6">
                         <div class="jualakun-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                             <div class="jualakun-item-caption-content text-center text-white"><img
                                     src="assets/img/logo-mobile-legend-31251-300x173.png" alt="Logo Mobile Legends">
@@ -752,7 +697,49 @@
     </script>
 
     <!-- akhir fungsi js untuk kontak -->
-    <!-- Core theme JS-->
+
+
+    <!-- untuk hitung wr -->
+    <script>
+        // Variables
+        const tMatch = document.querySelector("#tMatch");
+        const tWr = document.querySelector("#tWr");
+        const wrReq = document.querySelector("#wrReq");
+        const hasil = document.querySelector("#hasil");
+        const resultText = document.querySelector("#resultText");
+
+        // Functions
+        function res() {
+            const resultNum = rumus(tMatch.value, tWr.value, wrReq.value);
+            const text = `Kamu memerlukan sekitar <b>${resultNum}</b> win tanpa lose untuk mendapatkan win rate <b>${wrReq.value}%</b>`;
+            resultText.innerHTML = text;
+        }
+
+        function rumus(tMatch, tWr, wrReq) {
+            let tWin = tMatch * (tWr / 100);
+            let tLose = tMatch - tWin;
+            let sisaWr = 100 - wrReq;
+            let wrResult = 100 / sisaWr;
+            let seratusPersen = tLose * wrResult;
+            let final = seratusPersen - tMatch;
+            return Math.round(final);
+        }
+
+        // Main
+        window.addEventListener("load", init);
+
+        function init() {
+            load();
+            eventListener();
+        }
+
+        function load() { }
+
+        function eventListener() {
+            hasil.addEventListener("click", res);
+        }
+    </script>
+    <!-- akhir untuk hitung wr -->
 
     <script>
         // 1. tangkap element dengan class menu
@@ -781,10 +768,6 @@
             }
         });
     </script>
-
-    <!-- <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script> -->
-    <!-- untuk iklan website kita yang mengarah ke kita Go to www.addthis.com/dashboard to customize your tools -->
-    <!-- <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-6138ce273e4e1513"></script> -->
 
 </body>
 
