--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@
                             <input type="number" class="form-control" id="wrReq" step="any" autocomplete="off"
                                 placeholder="Cth: 85.5%">
                         </div>
-                        <button type="submit" class="btn btn-success d-block w-100" id="hasil">Hasil</button>
+                        <button type="button" class="btn btn-success d-block w-100" id="hasil">Hasil</button>
                         <span id="resultText" class="mt-2 text-center d-block"></span>
                     </form>
                 </div>
