--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@
                     <form>
                         <div class="mb-3">
                             <label for="idMatch" class="form-label">Total Match Anda</label>
-                            <input type="number" class="form-control" autofocus autocomplete="off"
+                            <input type="number" class="form-control" autocomplete="off"
                                 placeholder="Cth: 399" id="tMatch">
                         </div>
                         <div class="mb-3">
