--- a/index.html
+++ b/index.html
@@ -31,7 +31,6 @@
                 data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive"
                 aria-expanded="false" aria-label="Toggle navigation">
                 MENU
-                <i class="fas fa-bars"></i>
             </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ms-auto menu">
@@ -232,7 +231,7 @@
                             aria-labelledby="panelsStayOpen-headingEight">
                             <div class="accordion-body">
                                 <strong>Jasa joki Mythical Glory bisa <a
-                                        href="https://api.whatsapp.com/send?phone=6285770634144&text=Mau%20Joki%20dong,%20kode%20promo%20diskon%20pembelian%20dari%20website%20XyzVkiJokiwin"
+                                        href="https://api.whatsapp.com/send?phone=62857706341440&text=Mau%20Joki%20dong,%20kode%20promo%20diskon%20pembelian%20dari%20website%20XyzVkiJokiwin"
                                         target="_blank" rel="noopener">Kontak
                                         kami</a> terlebih dahulu</strong>
                                 | Waktu proses 1 hari/tergantung mau berapa match.
@@ -269,7 +268,7 @@
                         <li>Keuntungan membeli paket mendapat potongan harga dari jumlah Per-Tier.</li>
                     </ul>
                     <div class="text-center mt-5">
-                        <a href="https://api.whatsapp.com/send?phone=6285770634144&text=Mau%20Joki%20dong,%20kode%20promo%20diskon%20pembelian%20dari%20website%20XyzVkiJokiwin"
+                        <a href="https://api.whatsapp.com/send?phone=62857706341440&text=Mau%20Joki%20dong,%20kode%20promo%20diskon%20pembelian%20dari%20website%20XyzVkiJokiwin"
                             target="_blank" rel="noopener" class="btn btn-xl btn-primary">
                             JOKI SEKARANG
                         </a>
@@ -379,7 +378,7 @@
                         <li>Keuntungan membeli paket mendapat potongan harga dari jumlah Per-Tier.</li>
                     </ul>
                     <div class="text-center mt-5">
-                        <a href="https://api.whatsapp.com/send?phone=6285770634144&text=Mau%20Joki%20dong,%20kode%20promo%20diskon%20pembelian%20dari%20website%20XyzVkiJokiwin"
+                        <a href="https://api.whatsapp.com/send?phone=62857706341440&text=Mau%20Joki%20dong,%20kode%20promo%20diskon%20pembelian%20dari%20website%20XyzVkiJokiwin"
                             target="_blank" rel="noopener" class="btn btn-xl btn-primary">
                             JOKI SEKARANG
                         </a>
@@ -389,7 +388,7 @@
 
         </div>
     </section>
-
+    <!-- hitung wr -->
     <section class="page-section hitung-wr" id="hitung-wr">
         <div class="container">
             <h2 class="page-section-heading text-center text-secondary mb-0">HITUNG WR%</h2>
@@ -410,8 +409,8 @@
                     <form>
                         <div class="mb-3">
                             <label for="idMatch" class="form-label">Total Match Anda</label>
-                            <input type="number" class="form-control" autocomplete="off"
-                                placeholder="Cth: 399" id="tMatch">
+                            <input type="number" class="form-control" autocomplete="off" placeholder="Cth: 399"
+                                id="tMatch">
                         </div>
                         <div class="mb-3">
                             <label for="tWr" class="form-label">Total Win Rate Anda</label>
@@ -464,7 +463,7 @@
                             <h5 class="card-title">Metode Pembayaran Yang Tersedia</h5>
                             <p class="card-text">Hanya menerima metode pembayaran yang tersedia dibawah, detail
                                 pembayaran chat <a
-                                    href="https://api.whatsapp.com/send?phone=6285770634144&text=Mau%20Joki%20dong,%20kode%20promo%20diskon%20pembelian%20dari%20website%20XyzVkiJokiwin"
+                                    href="https://api.whatsapp.com/send?phone=62857706341440&text=Mau%20Joki%20dong,%20kode%20promo%20diskon%20pembelian%20dari%20website%20XyzVkiJokiwin"
                                     target="_blank" rel="noopener">
                                     Admin.</a>
                             </p>
@@ -545,7 +544,7 @@
             </div>
             <!-- kenapa Section Button-->
             <div class="text-center mt-4">
-                <a href="https://api.whatsapp.com/send?phone=6285770634144&text=Mau%20Joki%20dong,%20kode%20promo%20diskon%20pembelian%20dari%20website%20XyzVkiJokiwin"
+                <a href="https://api.whatsapp.com/send?phone=62857706341440&text=Mau%20Joki%20dong,%20kode%20promo%20diskon%20pembelian%20dari%20website%20XyzVkiJokiwin"
                     target="_blank" rel="noopener" class="btn btn-xl btn-outline-light">
                     JOKI SEKARANG
                 </a>
@@ -614,6 +613,7 @@
                         href="https://www.instagram.com/joki.win/" target="_blank" rel="noopener"
                         style="color:white;">@joki.win</a>
                 </div>
+                <div id="hasil=output"></div>
                 <!-- Footer kenapa Text-->
                 <div class="col-lg-4">
                     <h4 class="mb-4">TOKO</h4>
@@ -659,8 +659,6 @@
             </div>
         </div>
     </div>
-
-    <!-- Bootstrap core JS-->
     <!-- fungsi js untuk kontak -->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
