--- a/index.html
+++ b/index.html
@@ -601,9 +601,7 @@
                 <div class="col-lg-4 mb-5 mb-lg-0">
                     <h4 class="mb-4">LOKASI</h4>
                     <p class="lead mb-0">
-                        Sawangan, Kedaung, Depok
-                        <br />
-                        Jawa Barat, 16516
+                        SEGERA..
                     </p>
                 </div>
                 <!-- Footer Social Icons-->
