--- a/index.html
+++ b/index.html
@@ -599,7 +599,7 @@
             <div class="row">
                 <!-- Footer Location-->
                 <div class="col-lg-4 mb-5 mb-lg-0">
-                    <h4 class="mb-4">LOKASI</h4>
+                    <h4 class="mb-4">TOPUP DIAMOND</h4>
                     <p class="lead mb-0">
                         SEGERA..
                     </p>
